--- a/styles/css/footer/vtex.store-newsletter.css
+++ b/styles/css/footer/vtex.store-newsletter.css
@@ -12,6 +12,7 @@
   color: white;
   padding-top: 0.5rem;
 }
-/* .newsletterForm--global__footer__form :global(.vtex-input-prefix__group) {
-background-color: rgb(168, 109, 22);
-} */
+.newsletterForm--global__footer__form :global(.vtex-styleguide-9-x-input) {
+background-color: transparent;
+border: 1px solid white;
+}
