--- a/styles/css/footer/vtex.store-newsletter.css
+++ b/styles/css/footer/vtex.store-newsletter.css
@@ -1,5 +1,5 @@
 .newsletterForm--global__footer__form {
-  width: 330px;
+  /* width: 330px; */
 }
 .newsletterForm--global__footer__form :global(.vtex-button) {
   margin-top: 1rem;
