--- a/styles/css/header/vtex.menu.css
+++ b/styles/css/header/vtex.menu.css
@@ -9,6 +9,27 @@
   color    : var(--secundary-color);
 }
 
+.menuContainerNav--global__category__menu{
+  width: 100%;
+}
+.menuContainer--global__category__menu{
+  width: 100%;
+}
+
+.submenuWrapper--global__category{
+  width: 900px;
+  border-bottom: 1px solid black;
+  padding: 40px 30px;
+}
+.submenu--global__category{
+justify-content: flex-start;
+}
+
+.submenuWrapper--global__category :global(.vtex-menu-2-x-styledLinkContent){
+  font-size: 0.8rem;
+  color    : var( --primary-color);
+}
+
 /* estilos menu mobile y desktop */
 @media (max-width: 1024px) {
   .menuContainer--global__websites {
