feat:update mobile menu

--- a/styles/css/header/vtex.menu.css
+++ b/styles/css/header/vtex.menu.css
@@ -7,6 +7,7 @@
 .menuContainer--global__websites :global(.vtex-menu-2-x-styledLinkContent) {
   font-size: 0.8rem;
   color: var(--secundary-color);
+  /* border-bottom: 1px solid #ccc; */
 }
 
 .menuContainerNav--global__category__menu {
@@ -60,7 +61,7 @@
 
   .menuContainer--global__websites :global(.vtex-menu-2-x-menuItem) {
     margin-top: 1.5rem;
-    padding: 5px;
+    padding: 10px 0px;
     border-bottom: 1px solid #ccc;
     ;
   }
@@ -68,6 +69,39 @@
   .menuContainer--global__category__menu {
     width: 100%;
     justify-content: flex-start;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
   }
+}
+
+.accordionIcon--isClosed {
+  visibility: hidden;
+}
+
+.accordionIcon--isClosed::after {
+  visibility: visible;
+  content: ">";
+  font-size: 1.2rem;
+}
+
+.accordionIcon--isOpen {
+  visibility: hidden;
+}
+
+.accordionIcon--isOpen::after {
+  visibility: visible;
+  content: url(assets/images/flecha_abajo.png);
+  transform: rotate(45deg);
+  font-size: 1.2rem;
+}
+
+@media (max-width: 1024px) {
+  .menuContainer--global__websites :global(.vtex-menu-2-x-menuItem) {
+    margin-top: 0rem;
+  }
+
+  .submenuAccordion{
+    height: calc(100% - 63px);
+    overflow-y: auto
+  }
+
 }
