--- a/styles/css/mac/vtex.flex-layout.css
+++ b/styles/css/mac/vtex.flex-layout.css
@@ -1,4 +1,4 @@
-.flexRowContent--global__mac__row1 {
+.flexRowContent--global__mac__row1,.flexRowContent--mobile__mac__row1  {
     display: flex;
     max-width: 1200px;
     margin: 0 auto;
@@ -6,16 +6,24 @@
     justify-content: space-between;
 }
 
-.flexRowContent--global__mac__row5 {
+.flexRowContent--global__mac__row5, .flexRowContent--mobile__mac__row5{
     height: 150px;
     align-items: center;
     background-color: #e8e6e6;
 
 }
 
-.flexCol--global__mac__row5_col1 {
+.flexCol--global__mac__row5_col1, .flexCol--mobile__mac__row5_col1 {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+}
+
+.flexCol--mobile__mac__row5_col1 {
+  margin-top: 2rem;
+}
+
+.flexRowContent--mobile__mac__row3 :global(.vtex-shelf-1-x-container){
+padding: 0px;
 }
