--- a/styles/css/pdp/vtex.flex-layout.css
+++ b/styles/css/pdp/vtex.flex-layout.css
@@ -1,4 +1,4 @@
-.flexRow--global__product__row1{
+.flexRow--global__product__row1 {
     max-width: 1300px;
     margin: 0 auto;
 }
@@ -18,9 +18,40 @@
     width: 100%;
     position: fixed;
     z-index: 5;
-    bottom:0;
+    bottom: 0;
     background-color: white;
 
 }
 
 
+.flexRowContent--global__product__row2 :global(.vtex-button) {
+    max-width: 450px;
+    color: #fff;
+    background-color: #005A9C;
+    border-color: #005A9C;
+}
+
+.flexRowContent--global__product__row2 :global(.vtex-button):hover {
+    color: #005A9C;
+    background-color: #fff;
+    border-color: rgb(171, 169, 169);
+}
+
+.flexRow--global__product__row2 {
+    -webkit-box-shadow: -2px -14px 24px -9px rgba(0, 0, 0, 0.46);
+    -moz-box-shadow: -2px -14px 24px -9px rgba(0, 0, 0, 0.46);
+    box-shadow: -2px -14px 24px -9px rgba(0, 0, 0, 0.46);
+
+}
+
+@media (max-width: 1024px) {
+    .flexCol--global__product__row1__col2 {
+        padding: 0px 10px;
+        gap: 8px;
+    }
+
+    .flexCol--global__product__row2__col2 {
+        align-items: center;
+    }
+
+}
